# Mario64-Physics-Extraction

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  imgui.ini
.github/workflows/: ci.yml
assets_extractor/: main.cpp
build-core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SM64PhysicsSandbox.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sm64ps_asset_extractor.vcxproj  sm64ps_asset_extractor.vcxproj.filters  sm64ps_core.vcxproj  sm64ps_core.vcxproj.filters  sm64ps_movement_math_tests.vcxproj  sm64ps_movement_math_tests.vcxproj.filters  sm64ps_replay_tests.vcxproj  sm64ps_replay_tests.vcxproj.filters
build-core/Testing/Temporary/: CTestCostData.txt
build-core/sm64ps_asset_extractor.dir/Release/: sm64ps_asset_extractor.exe.recipe
build-core/sm64ps_asset_extractor.dir/Release/sm64ps_a.113B47DE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-core/sm64ps_core.dir/Release/sm64ps_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  sm64ps_core.lastbuildstate
build-core/sm64ps_movement_math_tests.dir/Release/: sm64ps_movement_math_tests.exe.recipe
build-core/sm64ps_movement_math_tests.dir/Release/sm64ps_m.67738A33.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-core/sm64ps_replay_tests.dir/Release/: sm64ps_replay_tests.exe.recipe
build-core/sm64ps_replay_tests.dir/Release/sm64ps_r.7C4EC2C1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-core/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-core/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake/: CopyIfExists.cmake
configs/: default.json
maps/: movement_lab.json
src/: SandboxApp.cpp  SandboxApp.h  main.cpp
src/assets/: RomExtractor.cpp  RomExtractor.h  RomImage.cpp  RomImage.h  RomManager.cpp  RomManager.h  RuntimeAssets.cpp  RuntimeAssets.h  TestMap.cpp  TestMap.h
src/collision/: CollisionTypes.h  CollisionWorld.cpp  CollisionWorld.h
src/debug/: Console.cpp  Console.h  DebugUI.cpp  DebugUI.h  TweakVars.cpp  TweakVars.h
src/mario/: ActionStateMachine.cpp  ActionStateMachine.h  LibSm64Backend.cpp  LibSm64Backend.h  MarioController.cpp  MarioController.h  MarioKartBackend.cpp  MarioKartBackend.h  MarioMath.cpp  MarioMath.h  MarioState.h  PlayerBackend.h
src/physics/: FixedTimestep.cpp  FixedTimestep.h  PhysicsWorld.cpp  PhysicsWorld.h
src/rendering/: DebugRenderer.cpp  DebugRenderer.h  Renderer.cpp  Renderer.h
src/replay/: Replay.cpp  Replay.h
src/surfaces/: Surface.h
src/util/: Config.cpp  Config.h  Log.cpp  Log.h  Profile.h  Sha1.cpp  Sha1.h
tests/: collision_tests.cpp  map_tests.cpp  movement_math_tests.cpp  replay_tests.cpp
tools/: README.md  setup_libsm64.ps1
